[package]
name = "tracegit"
authors = ["Abdallah Ahmed <sirajjunior@gmail.com>"]
version = "0.2.0"
description = "A CLI tool to trace the last commit where a script was working fine"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/sirajjunior540/tracegit.git"
keywords = ["git", "cli", "debugging", "trace"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
git2 = "0.18.1"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
